# Archipelage

./: .gitignore  CMakeLists.txt  PKGBUILD  PLUGIN_DYNAMIC_LAYOUT_PLAN.md  README.md  archipelago-launcher  archipelago.desktop  archipelago.service  shell.qml
backend/: ArchipelagoConfig.cpp  ArchipelagoConfig.h  BatteryService.cpp  BatteryService.h  BrightnessService.cpp  BrightnessService.h  CompositorProvider.cpp  CompositorProvider.h  NiriCompositorService.cpp  NiriCompositorService.h  NotificationService.cpp  NotificationService.h  PluginScanner.cpp  PluginScanner.h  StyleTokens.cpp  StyleTokens.h  SysBackend.cpp  SysBackend.h  SystemServices.cpp  VolumeService.cpp  VolumeService.h
docs/: archipelago-niri-system-bar.md  preview-surfaces.md  third-party-plugins.md
examples/: config.json
packaging/pacman/: archipelago-cleanup-plugins  archipelago-cleanup-plugins.hook.in
plugins/media-control-center/: .gitignore  CMakeLists.txt  PKGBUILD  README.md
plugins/media-control-center/backend/: CavaService.cpp  CavaService.h  CavaSupport.cpp  CavaSupport.h  MediaService.cpp  MediaService.h  MprisModel.cpp  MprisModel.h
plugins/media-control-center/tests/: cava_service_tests.cpp  media_model_tests.cpp  media_qml_tests.cpp
plugins/media-control-center/tests/qml/ArchipelagoCore/: StyleTokens.qml
plugins/media-control-center/ui/media/: Compact.qml  Expanded.qml  manifest.json
plugins/notification-center/: CMakeLists.txt  PKGBUILD  README.md
plugins/notification-center/backend/: NotificationCenterService.cpp  NotificationCenterService.h
plugins/notification-center/tests/: notification_center_backend_tests.cpp  notification_center_qml_tests.cpp
plugins/notification-center/tests/qml/ArchipelagoCore/: ArchipelagoConfig.qml  StyleTokens.qml
plugins/notification-center/ui/notifications/: Compact.qml  Expanded.qml  NotificationAvatar.qml  NotificationGlyph.qml  NotificationPreview.qml  manifest.json
plugins/system-control-center/: CMakeLists.txt  PKGBUILD  README.md
plugins/system-control-center/backend/: AudioRouteService.cpp  AudioRouteService.h  BluetoothService.cpp  BluetoothService.h  ConnectivityService.cpp  ConnectivityService.h  DisplayService.cpp  DisplayService.h  PowerProfileService.cpp  PowerProfileService.h
plugins/system-control-center/tests/: system_control_backend_tests.cpp  system_control_qml_tests.cpp
plugins/system-control-center/tests/qml/ArchipelagoBackend/: BatteryService.qml  BrightnessService.qml  SystemServices.qml  qmldir
plugins/system-control-center/tests/qml/ArchipelagoCore/: ArchipelagoConfig.qml  StyleTokens.qml  qmldir
plugins/system-control-center/ui/system-control/: AudioOutputPreview.qml  BluetoothDiscoveryPreview.qml  BluetoothPreview.qml  BrightnessGlyph.qml  Compact.qml  DisplayPreview.qml  Expanded.qml  NetworkGlyph.qml  SystemGlyph.qml  VolumeGlyph.qml  WifiPreview.qml  manifest.json
qml/: ArchipelagoShell.qml
qml/components/: ExpandedSurface.qml  IslandAnchorRow.qml  IslandCapsule.qml  IslandHost.qml  IslandLayoutScheduler.qml  IslandModule.qml  NotificationCapsule.qml  PreviewController.qml
qml/modules/: ClockExpanded.qml  MediaButton.qml  MediaCompact.qml  MediaExpanded.qml  MediaState.qml  NotificationsExpanded.qml  StatusPill.qml  SystemExpanded.qml  WorkspacesCompact.qml
qml/plugins/clock/: Compact.qml  manifest.json
qml/plugins/media/: Compact.qml  manifest.json
qml/plugins/notifications/: Expanded.qml  manifest.json
qml/plugins/system/: Compact.qml  ControlSlider.qml  Expanded.qml  manifest.json
qml/plugins/time/: Compact.qml  Expanded.qml  manifest.json
qml/plugins/workspaces/: Compact.qml  Expanded.qml  manifest.json
qml/services/: IslandRegistry.qml
tests/: archipelago_config_tests.cpp  archipelago_qml_tests.cpp  battery_service_tests.cpp  brightness_service_tests.cpp  niri_compositor_service_tests.cpp  notification_service_tests.cpp  plugin_scanner_tests.cpp  volume_service_tests.cpp
